--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body{
 }
 .accordion-item-body-content {
   padding: 1rem;
-  line-height: 1.5rem;
+  max-height: auto;
   border-top: 1px solid #000;
   //border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
 }
@@ -363,7 +363,7 @@ body{
     border-bottom: 1px solid #757575;
 }
 
-@media screen and (max-width: 730px){
+@media screen and (max-width: 1223px){
     .container .head{
         padding: 20px 50px;
     }
